--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,10 +106,11 @@
     <string name="you_won">Congratulation! \nYou Won…</string>
     <string name="read_and_earn"><![CDATA[Read & Earn]]></string>
     <string name="noWebsiteFound">No More Articles Founds</string>
+
     <string name="scratch">Lucky Scratch</string>
     <string name="didNotSign_up1">Don\'t have an account ? <font color="#f34e71">Sign up here.</font></string>
     <string name="already_have_account">Already have an account? <font color="#f34e71">Sign in.</font></string>
     <string name="welcome_back">Welcome back!</string>
     <string name="notification_permission_dialog">Please grant notification permissions to stay tuned for new offers and updates</string>
-    <string name="default_web_client_id" />
+    <string name="default_web_client_id">924083677310-0cdpkpcg07rg9kkam4qm92uo2v3k6uqp.apps.googleusercontent.com</string>
 </resources>
